<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.galdamez.navegacion.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".PuntajeFinalEquipos">

        <TextView
            android:id="@+id/TeamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/TeamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.500684" />

        <TextView
            android:id="@+id/TeamAPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintBottom_toTopOf="@+id/placeTeamA"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TeamA" />

        <TextView
            android:id="@+id/TeamBPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintBottom_toTopOf="@+id/placeTeamB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/TeamB" />

        <TextView
            android:id="@+id/placeTeamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganador"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TeamA" />

        <TextView
            android:id="@+id/placeTeamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perdedor"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/TeamB" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>